--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,12 +1,20 @@
 {
   "dependencies": {
+    "com.ktgame.config.core": "1.0.4",
+    "com.ktgame.core": "1.0.5",
+    "com.ktgame.foundation": "1.0.3",
+    "com.ktgame.services.scene": "1.0.2",
+    "com.ktgame.unitask": "1.0.1",
+    "com.ktgame.unitask.extensions": "1.0.1",
+    "com.ktgame.utils.class-type-reference": "1.0.1",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
-    "com.unity.analytics": "3.6.12",
-    "com.unity.ide.visualstudio": "2.0.16",
+    "com.unity.ai.navigation": "1.1.5",
+    "com.unity.analytics": "3.8.1",
+    "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.textmeshpro": "3.0.6",
-    "com.unity.timeline": "1.4.8",
+    "com.unity.timeline": "1.7.6",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
@@ -39,5 +47,14 @@
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
     "com.unity.modules.xr": "1.0.0"
-  }
+  },
+  "scopedRegistries": [
+    {
+      "name": "package.openupm.com",
+      "url": "http://package.openupm.com",
+      "scopes": [
+        "com.ktgame"
+      ]
+    }
+  ]
 }
