--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -4,11 +4,12 @@
     "com.ktgame.assets.loader.core": "1.0.1",
     "com.ktgame.assets.loader.resources": "1.0.1",
     "com.ktgame.config.core": "1.0.4",
-    "com.ktgame.core": "1.0.5",
+    "com.ktgame.core": "1.0.6",
     "com.ktgame.foundation": "1.0.3",
     "com.ktgame.manager.pool": "1.0.1",
     "com.ktgame.manager.ui": "1.0.3",
-    "com.ktgame.services.scene": "1.0.2",
+    "com.ktgame.services.audio": "https://github.com/KhanhTQ-hub/com.ktgame.services.audio.git",
+    "com.ktgame.services.scene": "1.0.3",
     "com.ktgame.unitask": "1.0.1",
     "com.ktgame.unitask.extensions": "1.0.1",
     "com.ktgame.unregister": "1.0.1",
